--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "converter_of_values",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "lint:html": "linthtml src/**/*.html",
     "lint:scss": "stylelint **/*.scss",
@@ -12,7 +12,8 @@
     "build": "rm -rf dist && parcel build ./src/index.html --public-url ./ --no-content-hash",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "server": "json-server -w server/db.json -p 3001"
   },
   "keywords": [],
   "author": "",
@@ -25,13 +26,15 @@
     "eslint-plugin-import": "^2.26.0",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.0",
-    "parcel": "^1.12.3",
     "postcss": "^8.4.16",
     "postcss-scss": "^4.0.5",
     "stylelint": "^14.12.0",
     "stylelint-config-standard-scss": "^5.0.0"
   },
   "dependencies": {
+    "browserify-fs": "^1.0.0",
+    "bulma": "^0.9.4",
+    "parcel": "^1.12.3",
     "sass": "^1.54.9"
   }
 }
